trying new problems

--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "id": "3a0dcacf",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "193604ac",
    "metadata": {},
    "outputs": [],
@@ -85,38 +85,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "id": "8e905659",
    "metadata": {},
    "outputs": [],
    "source": [
-    "problem = np.load('problems/problem_r2_100.npy')"
+    "p_g = np.load('problems/problem_g_100.npy')\n",
+    "p_r1 = np.load('problems/problem_r1_100.npy')\n",
+    "p_r2 = np.load('problems/problem_r2_100.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "60b26327",
+   "execution_count": 72,
+   "id": "a1cad01d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20, 20)\n",
-      "(100, 100)\n"
+      "[[  0.         179.92038688 176.126132   ... 162.61509016 407.15461186\n",
+      "  141.77638964]\n",
+      " [179.92038688   0.         278.35892376 ... 116.33000682 281.45211088\n",
+      "  154.17643486]\n",
+      " [176.126132   278.35892376   0.         ... 178.74068495 375.52755063\n",
+      "  312.44633915]\n",
+      " ...\n",
+      " [162.61509016 116.33000682 178.74068495 ...   0.         245.06340681\n",
+      "  224.97614312]\n",
+      " [407.15461186 281.45211088 375.52755063 ... 245.06340681   0.\n",
+      "  434.61707535]\n",
+      " [141.77638964 154.17643486 312.44633915 ... 224.97614312 434.61707535\n",
+      "    0.        ]]\n"
      ]
     }
    ],
    "source": [
-    "print(test_problem.shape)\n",
-    "print(problem.shape)"
+    "print(p_g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "071e8c52",
+   "execution_count": 73,
+   "id": "2f0fe6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.           4.9766      65.54479501 ...   7.83902018  27.41995194\n",
+      "   87.69299895]\n",
+      " [  9.36499057   0.         110.87932346 ...  19.63789468  30.94641048\n",
+      "   50.11884753]\n",
+      " [ 35.88566785  54.64069406   0.         ...  66.45444707  87.16585662\n",
+      "   13.71356104]\n",
+      " ...\n",
+      " [ 15.7861903   13.58665954  37.36828725 ...   0.          33.44981139\n",
+      "   28.40778893]\n",
+      " [ 43.48793718  32.44459687  80.22882128 ...  18.97247219   0.\n",
+      "   68.05734486]\n",
+      " [ 38.95399487  52.21881804  12.94487068 ...  67.75221274  60.95591025\n",
+      "    0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p_r1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3ac4964e",
    "metadata": {},
    "outputs": [
     {
@@ -140,108 +182,88 @@
     }
    ],
    "source": [
-    "print(problem)"
+    "print(p_r2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "81f4457c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "34.41537136306256\n",
-      "47.60002854776626\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(problem[4][5])\n",
-    "print(problem[5][4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "id": "83d367fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.True_"
+       "np.False_"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Negative values?\n",
-    "np.any(problem < 0)"
+    "np.any(p_g < 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "id": "03175c34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Diagonal is all zero?\n",
-    "np.allclose(np.diag(problem), 0.0)"
+    "np.allclose(np.diag(p_g), 0.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "id": "a81d846f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Symmetric matrix?\n",
-    "np.allclose(problem, problem.T)"
+    "np.allclose(p_g, p_g.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "id": "159567d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,8 +271,8 @@
    "source": [
     "# Triangular inequality\n",
     "all(\n",
-    "    problem[x, y] <= problem[x, z] + problem[z, y]\n",
-    "    for x, y, z in list(combinations(range(problem.shape[0]), 3))\n",
+    "    p_g[x, y] <= p_g[x, z] + p_g[z, y]\n",
+    "    for x, y, z in list(combinations(range(p_g.shape[0]), 3))\n",
     ")"
    ]
   },
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "id": "e64a6b5d",
    "metadata": {},
    "outputs": [],
@@ -301,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "id": "b8698471",
    "metadata": {},
    "outputs": [
@@ -309,17 +331,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sol: [25, 33, 99, 7, 92, 22, 9, 75, 71, 85, 36, 17, 19, 76, 73, 47, 61, 29, 1, 0, 63, 56, 51, 66, 31, 20, 5, 38, 54, 83, 34, 97, 44, 81, 60, 46, 69, 24, 79, 13, 6, 23, 52, 49, 42, 86, 77, 90, 62, 94, 40, 3, 26, 28, 14, 89, 80, 39, 64, 72, 98, 70, 91, 74, 84, 4, 10, 8, 32, 15, 53, 41, 0, 45, 68, 65, 78, 93, 35, 58, 43, 27, 37, 11, 59, 88, 50, 87, 12, 16, 0, 48, 82, 95, 21, 67, 55, 96, 0, 30, 25]\n",
-      "total_cost: -4618.464054514575\n"
+      "sol: [53, 89, 80, 42, 86, 61, 29, 1, 0, 63, 56, 22, 9, 75, 92, 50, 87, 26, 77, 76, 36, 17, 19, 67, 55, 47, 66, 71, 85, 23, 7, 41, 51, 79, 13, 6, 33, 99, 40, 49, 83, 34, 38, 54, 4, 46, 69, 24, 31, 20, 5, 57, 94, 60, 65, 73, 64, 72, 98, 70, 91, 74, 84, 43, 3, 52, 81, 27, 32, 25, 21, 14, 10, 90, 62, 28, 45, 68, 30, 97, 44, 88, 95, 58, 78, 93, 35, 8, 59, 16, 0, 37, 11, 48, 82, 18, 2, 15, 96, 12, 53]\n",
+      "total_cost: -4673.069736192857\n"
      ]
     }
    ],
    "source": [
-    "sol, total_cost = algo_1(problem)\n",
+    "sol, total_cost = algo_1(p_r2)\n",
     "\n",
     "print(f\"sol: {sol}\")\n",
     "print(f\"total_cost: {total_cost}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "329e4674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
