first algorithm implemented

--- a/tsp2.ipynb
+++ b/tsp2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "id": "3a0dcacf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
     "import numpy as np\n",
-    "from random import randint"
+    "import random"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "id": "193604ac",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "id": "8e905659",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "id": "a1cad01d",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "id": "2f0fe6a3",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "id": "3ac4964e",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "id": "04a09883",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "id": "b3a670fb",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "id": "11634d6e",
    "metadata": {},
    "outputs": [],
@@ -266,8 +266,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "ccdc8e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_initial_population(pop_size, num_cities):\n",
+    "    \"\"\"Creates a list of random tours (solutions).\"\"\"\n",
+    "    population = []\n",
+    "    for _ in range(pop_size):\n",
+    "        tour = np.random.permutation(num_cities)\n",
+    "        population.append(tour)\n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "104574f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_cost(tour, distance_matrix):\n",
+    "    \"\"\"\n",
+    "    Calculates the total cost (distance) of a single tour.\n",
+    "    This function works for BOTH symmetric and asymmetric matrices\n",
+    "    because it respects the order of the tour.\n",
+    "    \"\"\"\n",
+    "    total_cost = 0\n",
+    "    num_cities = len(tour)\n",
+    "    for i in range(num_cities):\n",
+    "        city_a = tour[i]\n",
+    "        # Use modulo to consider going back to the starting city\n",
+    "        city_b = tour[(i + 1) % num_cities]\n",
+    "        \n",
+    "        # it takes the cost from A -> B\n",
+    "        total_cost += distance_matrix[city_a, city_b]\n",
+    "        \n",
+    "    return total_cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "f1e62fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_fitness(tour, distance_matrix):\n",
+    "    \"\"\"\n",
+    "    Calculates fitness. Since we want to MINIMIZE cost,\n",
+    "    a good fitness function is 1 / cost.\n",
+    "    (This assumes cost is always > 0, which is true for p_g and p_r1)\n",
+    "    \"\"\"\n",
+    "    cost = calculate_cost(tour, distance_matrix)\n",
+    "    return 1.0 / (cost + 1e-6) # the second term on the denominator has been added for avoiding divisions by 0s."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "8558668d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tournament_selection(population, fitness_scores, k):\n",
+    "    \"\"\"\n",
+    "    Selects one parent using k-tournament selection.\n",
+    "    Picks k random individuals and returns the fittest one.\n",
+    "    \"\"\"\n",
+    "    indices = np.random.choice(len(population), k, replace=False)\n",
+    "    k_fitnesses = [fitness_scores[i] for i in indices]\n",
+    "    best_local_idx = np.argmax(k_fitnesses)\n",
+    "    best_global_idx = indices[best_local_idx]\n",
+    "    \n",
+    "    return population[best_global_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "e87782ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossover(parent1, parent2):\n",
+    "    \"\"\"\n",
+    "    Perform crossover\n",
+    "    \"\"\"\n",
+    "    num_cities = len(parent1)\n",
+    "    offspring = np.full(num_cities, -1)\n",
+    "    \n",
+    "    # Select two random cut points\n",
+    "    start, end = sorted(np.random.choice(num_cities, 2, replace=False))\n",
+    "    \n",
+    "    # Copy the slice from parent1\n",
+    "    offspring[start:end] = parent1[start:end]\n",
+    "    \n",
+    "    # Fill remaining slots from parent2\n",
+    "    parent2_ptr = 0\n",
+    "    offspring_ptr = 0\n",
+    "    cities_in_offspring = set(offspring[start:end])\n",
+    "    \n",
+    "    while -1 in offspring:\n",
+    "        # Find next available slot in offspring\n",
+    "        if offspring_ptr == start:\n",
+    "            offspring_ptr = end\n",
+    "            \n",
+    "        # Get city from parent2\n",
+    "        city_to_add = parent2[parent2_ptr]\n",
+    "        parent2_ptr += 1\n",
+    "        \n",
+    "        if city_to_add not in cities_in_offspring:\n",
+    "            offspring[offspring_ptr] = city_to_add\n",
+    "            offspring_ptr += 1\n",
+    "            \n",
+    "    return offspring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "60e8f3fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DIFFERENT KINDS OF MUTATIONS\n",
+    "\n",
+    "\n",
+    "def swap_mutation(tour):\n",
+    "    \"\"\"Performs a simple swap mutation on a tour (modifies in-place).\"\"\"\n",
+    "    idx1, idx2 = np.random.choice(len(tour), 2, replace=False)\n",
+    "    tour[idx1], tour[idx2] = tour[idx2], tour[idx1]\n",
+    "\n",
+    "\n",
+    "def inversion_mutation(tour):\n",
+    "    \"\"\"\n",
+    "    Performs an inversion mutation (modifies in-place).\n",
+    "    \"\"\"\n",
+    "    # Select two random cut points\n",
+    "    start, end = sorted(np.random.choice(len(tour), 2, replace=False))\n",
+    "    \n",
+    "    # Reverse the sub-sequence in-place\n",
+    "    tour[start:end] = tour[start:end][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "41d6c4b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def algo_1(distance_matrix, pop_size, num_generations, elitism_size, k, crossover_rate, mutation_rate):\n",
+    "    \"\"\"\n",
+    "    Runs the main evolutionary algorithm loop.\n",
+    "    \"\"\"\n",
+    "    num_cities = distance_matrix.shape[0]\n",
+    "    \n",
+    "    # Initializing\n",
+    "    population = create_initial_population(pop_size, num_cities)\n",
+    "    best_tour_so_far = None\n",
+    "    best_cost_so_far = float('inf')\n",
+    "    \n",
+    "    \n",
+    "    for gen in range(num_generations):\n",
+    "        # Calculate fitness for the entire population\n",
+    "        fitness_scores = [calculate_fitness(tour, distance_matrix) for tour in population]\n",
+    "        \n",
+    "        # Find the indices of the N best individuals,\n",
+    "        # The last index is the one that refers to the individual with the best fitness\n",
+    "        elite_indices = np.argsort(fitness_scores)[-elitism_size:]\n",
+    "        # creating a new population composed of the best individuals of the previous\n",
+    "        new_population = [population[i].copy() for i in elite_indices]\n",
+    "        \n",
+    "        # Track the best-ever solution\n",
+    "        best_current_idx = elite_indices[-1]\n",
+    "        current_best_cost = calculate_cost(population[best_current_idx], distance_matrix)\n",
+    "        \n",
+    "        if current_best_cost < best_cost_so_far:\n",
+    "            best_cost_so_far = current_best_cost\n",
+    "            best_tour_so_far = population[best_current_idx].copy()\n",
+    "            if gen % 20 == 0: # Print update, but not too often\n",
+    "                print(f\"Gen {gen}: New best cost = {best_cost_so_far:.2f}\")\n",
+    "\n",
+    "        # In this loop we compute the generation\n",
+    "        while len(new_population) < pop_size:\n",
+    "            # Selecting 2 parents using tournament selection\n",
+    "            parent1 = tournament_selection(population, fitness_scores, k)\n",
+    "            parent2 = tournament_selection(population, fitness_scores, k)\n",
+    "            \n",
+    "            # performing the cross over (random decision defined by crossover_rate)\n",
+    "            if random.random() < crossover_rate:\n",
+    "                offspring = crossover(parent1, parent2)\n",
+    "            else:\n",
+    "                offspring = parent1.copy() \n",
+    "            \n",
+    "            # performing the mutation\n",
+    "            # (again, its a random decision that doesn't even depend on whether the crossover is done or not)\n",
+    "            if random.random() < mutation_rate:\n",
+    "                # Here e we can choose to use inversion_mutation() and swap_mutation()\n",
+    "                inversion_mutation(offspring)\n",
+    "                \n",
+    "            new_population.append(offspring)\n",
+    "\n",
+    "        # Replace the old population with the new one\n",
+    "        population = new_population\n",
+    "\n",
+    "    return best_tour_so_far, best_cost_so_far"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "bc21ffce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen 0: New best cost = 23134.34\n",
+      "Gen 20: New best cost = 17661.25\n",
+      "Gen 40: New best cost = 15308.21\n",
+      "Gen 100: New best cost = 11049.17\n",
+      "Gen 140: New best cost = 9575.72\n",
+      "Gen 160: New best cost = 9285.16\n",
+      "Gen 180: New best cost = 8489.54\n",
+      "Gen 260: New best cost = 7460.57\n",
+      "Gen 300: New best cost = 6993.32\n",
+      "Gen 340: New best cost = 6573.21\n",
+      "Gen 360: New best cost = 6350.41\n",
+      "Gen 440: New best cost = 5726.34\n",
+      "Gen 540: New best cost = 5358.00\n",
+      "Gen 620: New best cost = 4940.43\n",
+      "Best tour (p_g): [78 88 43 87 86 55 34  6 85 89 69 22  5 37  7 49  1  8  4 75 36 46 93 99\n",
+      " 20 27 63 47 71 74  0 14 41 33 54 67 32 42 81 30 97 64 10 48 31 72 18 56\n",
+      " 70 58  2 11 57 60 21 28 51  3 84 66 73 45 53 16 94 79 44 17 35 38 95 61\n",
+      " 23 82 59  9 62 90 13 76 29 65 39 98 96 25 80 19 40 24 50 26 52 68 83 77\n",
+      " 15 91 12 92]\n",
+      "Total cost (p_g): 4553.08\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_tour_p_g, best_cost_p_g = algo_1(\n",
+    "        distance_matrix=p_g,\n",
+    "        pop_size=POPULATION_SIZE,\n",
+    "        num_generations=NUM_GENERATIONS,\n",
+    "        elitism_size=ELITISM_SIZE,\n",
+    "        k=TOURNAMENT_K,\n",
+    "        crossover_rate=CROSSOVER_RATE,\n",
+    "        mutation_rate=MUTATION_RATE\n",
+    "    )\n",
+    "\n",
+    "print(f\"Best tour (p_g): {best_tour_p_g}\")\n",
+    "print(f\"Total cost (p_g): {best_cost_p_g:.2f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "20be6e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen 0: New best cost = 4657.52\n",
+      "Gen 20: New best cost = 3251.88\n",
+      "Gen 40: New best cost = 2741.64\n",
+      "Gen 60: New best cost = 2389.47\n",
+      "Gen 240: New best cost = 2048.99\n",
+      "Gen 320: New best cost = 1981.94\n",
+      "Gen 560: New best cost = 1892.97\n",
+      "Best tour (p_g): [90 38 54 66 49 21 64 29 43 24 47 65 14 89 18 91  5 42 72  7 96 10 68 50\n",
+      " 35 40 73 26 69 83 78 41 25 62 28 15 95 74 93 81 60 20 77 87 58  1  0 94\n",
+      " 23 22 51 12 13 75 30  8 99 46 55 70 56 71 98 59 92 76 63 61 39  3  6 67\n",
+      " 33 31 82 97 34 37 45 57 19 84 86 52 11 79  2  9 16 32  4 85 17 80 53 36\n",
+      " 88 44 27 48]\n",
+      "Total cost (p_g): 1827.13\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_tour_p_r1, best_cost_p_r1 = algo_1(\n",
+    "        distance_matrix=p_r1,\n",
+    "        pop_size=POPULATION_SIZE,\n",
+    "        num_generations=NUM_GENERATIONS,\n",
+    "        elitism_size=ELITISM_SIZE,\n",
+    "        k=TOURNAMENT_K,\n",
+    "        crossover_rate=CROSSOVER_RATE,\n",
+    "        mutation_rate=MUTATION_RATE\n",
+    ")\n",
+    "\n",
+    "print(f\"Best tour (p_g): {best_tour_p_r1}\")\n",
+    "print(f\"Total cost (p_g): {best_cost_p_r1:.2f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "6296ae34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen 0: New best cost = 16.05\n",
+      "Best tour (p_g): [13 40 37 88 60 39 79 85 24 25 97 27 41 99 64 76 62 86 20 80 48 43 94 96\n",
+      " 19 98 70 14 42 44 78 68 16  9 18 95 10  8 28 56 82 57  2 34 51 11  3 49\n",
+      " 30 58 92 46 50 21 65 52 71 22 61 90  1 55 67 75 17 15 72 84 74 12  4 23\n",
+      " 69 83 38  6 32 59 47 45 35 31  5 54 91 53 87 77  7 26 29 36 73 89 66 93\n",
+      "  0 63 81 33]\n",
+      "Total cost (p_g): 0.06\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_tour_p_r2, best_cost_p_r2 = algo_1(\n",
+    "        distance_matrix=p_r2,\n",
+    "        pop_size=POPULATION_SIZE,\n",
+    "        num_generations=NUM_GENERATIONS,\n",
+    "        elitism_size=ELITISM_SIZE,\n",
+    "        k=TOURNAMENT_K,\n",
+    "        crossover_rate=CROSSOVER_RATE,\n",
+    "        mutation_rate=MUTATION_RATE\n",
+    ")\n",
+    "\n",
+    "print(f\"Best tour (p_g): {best_tour_p_r2}\")\n",
+    "print(f\"Total cost (p_g): {best_cost_p_r2:.2f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5f4d109",
    "metadata": {},
    "outputs": [],
    "source": []
