--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "3a0dcacf",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "id": "193604ac",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "8e905659",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "a1cad01d",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "2f0fe6a3",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "3ac4964e",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "83d367fd",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "np.False_"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "03175c34",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "id": "a81d846f",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "id": "159567d4",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "True"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +274,14 @@
     "    p_g[x, y] <= p_g[x, z] + p_g[z, y]\n",
     "    for x, y, z in list(combinations(range(p_g.shape[0]), 3))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "361cfd6a",
+   "metadata": {},
+   "source": [
+    "### LOAD PROBLEMS"
    ]
   },
   {
