tabu search implemented + README

--- a/final_solution.ipynb
+++ b/final_solution.ipynb
@@ -114,16 +114,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b6e6342",
-   "metadata": {},
-   "source": [
-    "### GENERAL UTILS FUNCTIONS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b3a670fb",
    "metadata": {},
    "outputs": [
@@ -150,6 +142,9 @@
     }
    ],
    "source": [
+    "# TEST OF PROBLEMS' CHARACTERISTIC\n",
+    "\n",
+    "\n",
     "print(f\"check negative value | g_100: {check_negative_value(g_100.distance_matrix)}\")\n",
     "print(f\"check diagonal all 0s | g_100: {check_diagonal_all_zero(g_100.distance_matrix)}\")\n",
     "print(f\"check symmetry | g_100: {check_symmetry(g_100.distance_matrix)}\")\n",
@@ -186,85 +181,20 @@
     "# HYPERPARAMETERS (for simulated_annealing)\n",
     "INITIAL_TEMPERATURE = 1000.0\n",
     "COOLING_RATE = 0.995\n",
-    "SA_ITERATIONS = 10000 # This will be its \"runtime\" instead of generations"
+    "SA_ITERATIONS = 10000\n",
+    "\n",
+    "# HYPERPARAMETERS (for algo_3)\n",
+    "TS_ITERATIONS = 10000\n",
+    "TABU_TENURE = 30         \n",
+    "NEIGHBORHOOD_SIZE = 50 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5f4d109",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "g_10 | Running SA...\n",
-      "g_10 | Total fitness: 1497.66\n",
-      "\n",
-      "g_20 | Running SA...\n",
-      "g_20 | Total fitness: 1999.21\n",
-      "\n",
-      "g_50 | Running SA...\n",
-      "g_50 | Total fitness: 2939.76\n",
-      "\n",
-      "g_100 | Running SA...\n",
-      "g_100 | Total fitness: 4835.89\n",
-      "\n",
-      "g_200 | Running SA...\n",
-      "g_200 | Total fitness: 10122.13\n",
-      "\n",
-      "g_500 | Running SA...\n",
-      "g_500 | Total fitness: 36561.02\n",
-      "\n",
-      "g_1000 | Running SA...\n",
-      "g_1000 | Total fitness: 95388.30\n",
-      "\n",
-      "r1_10 | Running SA...\n",
-      "r1_10 | Total fitness: 184.27\n",
-      "\n",
-      "r1_20 | Running SA...\n",
-      "r1_20 | Total fitness: 487.18\n",
-      "\n",
-      "r1_50 | Running SA...\n",
-      "r1_50 | Total fitness: 1066.29\n",
-      "\n",
-      "r1_100 | Running SA...\n",
-      "r1_100 | Total fitness: 1910.77\n",
-      "\n",
-      "r1_200 | Running SA...\n",
-      "r1_200 | Total fitness: 5788.53\n",
-      "\n",
-      "r1_500 | Running SA...\n",
-      "r1_500 | Total fitness: 19079.33\n",
-      "\n",
-      "r1_1000 | Running SA...\n",
-      "r1_1000 | Total fitness: 45083.13\n",
-      "\n",
-      "r2_10 | Running SA...\n",
-      "r2_10 | Total fitness: -398.57\n",
-      "\n",
-      "r2_20 | Running SA...\n",
-      "r2_20 | Total fitness: -596.65\n",
-      "\n",
-      "r2_50 | Running SA...\n",
-      "r2_50 | Total fitness: -1273.70\n",
-      "\n",
-      "r2_100 | Running SA...\n",
-      "r2_100 | Total fitness: -2635.05\n",
-      "\n",
-      "r2_200 | Running SA...\n",
-      "r2_200 | Total fitness: -4472.14\n",
-      "\n",
-      "r2_500 | Running SA...\n",
-      "r2_500 | Total fitness: -6789.67\n",
-      "\n",
-      "r2_1000 | Running SA...\n",
-      "r2_1000 | Total fitness: -8258.42\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DO THE COMPUTATION FOR ALL THE PROBLEMS ALL AT ONCE\n",
     "\n",
@@ -284,11 +214,21 @@
     "        show_process=False\n",
     "    )\"\"\"\n",
     "\n",
+    "    \"\"\"\n",
     "    best_tour, best_fitness, _ = simulated_annealing(\n",
     "        problem=problem,\n",
     "        initial_temp=INITIAL_TEMPERATURE,\n",
     "        cooling_rate=COOLING_RATE,\n",
     "        num_iterations=SA_ITERATIONS,\n",
+    "        show_process=False\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "\n",
+    "    best_tour, best_fitness, _ = tabu_search(\n",
+    "        problem=problem,\n",
+    "        num_iterations=TS_ITERATIONS,\n",
+    "        tabu_tenure=TABU_TENURE,\n",
+    "        neighborhood_size=NEIGHBORHOOD_SIZE,\n",
     "        show_process=False\n",
     "    )\n",
     "\n",
