results added to README.md

--- a/final_solution.ipynb
+++ b/final_solution.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3a670fb",
    "metadata": {},
    "outputs": [
@@ -190,19 +190,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14186faa",
+   "metadata": {},
+   "source": [
+    "### RESULTS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c5f4d109",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g_10 | Running...\n",
+      "g_10 | Total fitness: 1497.66\n",
+      "\n",
+      "g_20 | Running...\n",
+      "g_20 | Total fitness: 1755.51\n",
+      "\n",
+      "g_50 | Running...\n",
+      "g_50 | Total fitness: 2771.26\n",
+      "\n",
+      "g_100 | Running...\n",
+      "g_100 | Total fitness: 4424.08\n",
+      "\n",
+      "g_200 | Running...\n",
+      "g_200 | Total fitness: 8913.38\n",
+      "\n",
+      "g_500 | Running...\n",
+      "g_500 | Total fitness: 36002.08\n",
+      "\n",
+      "g_1000 | Running...\n",
+      "g_1000 | Total fitness: 99748.92\n",
+      "\n",
+      "r1_10 | Running...\n",
+      "r1_10 | Total fitness: 184.27\n",
+      "\n",
+      "r1_20 | Running...\n",
+      "r1_20 | Total fitness: 364.84\n",
+      "\n",
+      "r1_50 | Running...\n",
+      "r1_50 | Total fitness: 878.75\n",
+      "\n",
+      "r1_100 | Running...\n",
+      "r1_100 | Total fitness: 1854.76\n",
+      "\n",
+      "r1_200 | Running...\n",
+      "r1_200 | Total fitness: 4436.31\n",
+      "\n",
+      "r1_500 | Running...\n",
+      "r1_500 | Total fitness: 15056.19\n",
+      "\n",
+      "r1_1000 | Running...\n",
+      "r1_1000 | Total fitness: 35403.57\n",
+      "\n",
+      "r2_10 | Running...\n",
+      "r2_10 | Total fitness: -411.70\n",
+      "\n",
+      "r2_20 | Running...\n",
+      "r2_20 | Total fitness: -656.73\n",
+      "\n",
+      "r2_50 | Running...\n",
+      "r2_50 | Total fitness: -1641.51\n",
+      "\n",
+      "r2_100 | Running...\n",
+      "r2_100 | Total fitness: -2934.03\n",
+      "\n",
+      "r2_200 | Running...\n",
+      "r2_200 | Total fitness: -5934.63\n",
+      "\n",
+      "r2_500 | Running...\n",
+      "r2_500 | Total fitness: -11269.19\n",
+      "\n",
+      "r2_1000 | Running...\n",
+      "r2_1000 | Total fitness: -17285.53\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# DO THE COMPUTATION FOR ALL THE PROBLEMS ALL AT ONCE\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "for problem in problems_arr:\n",
-    "    \"\"\"\n",
+    "\n",
     "    best_tour, best_fitness, _ = algo_1(\n",
     "        problem=problem,\n",
     "        pop_size=POPULATION_SIZE,\n",
@@ -212,9 +285,91 @@
     "        crossover_rate=CROSSOVER_RATE,\n",
     "        mutation_rate=MUTATION_RATE,\n",
     "        show_process=False\n",
-    "    )\"\"\"\n",
+    "    )\n",
     "\n",
-    "    \"\"\"\n",
+    "    #print(f\"{problem.name} | Best tour: {best_tour}\")\n",
+    "    print(f\"{problem.name} | Total fitness: {best_fitness:.2f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "23a452c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g_10 | Running SA...\n",
+      "g_10 | Total fitness: 1497.66\n",
+      "\n",
+      "g_20 | Running SA...\n",
+      "g_20 | Total fitness: 1809.41\n",
+      "\n",
+      "g_50 | Running SA...\n",
+      "g_50 | Total fitness: 2679.18\n",
+      "\n",
+      "g_100 | Running SA...\n",
+      "g_100 | Total fitness: 4760.07\n",
+      "\n",
+      "g_200 | Running SA...\n",
+      "g_200 | Total fitness: 10520.38\n",
+      "\n",
+      "g_500 | Running SA...\n",
+      "g_500 | Total fitness: 36490.32\n",
+      "\n",
+      "g_1000 | Running SA...\n",
+      "g_1000 | Total fitness: 95520.00\n",
+      "\n",
+      "r1_10 | Running SA...\n",
+      "r1_10 | Total fitness: 190.60\n",
+      "\n",
+      "r1_20 | Running SA...\n",
+      "r1_20 | Total fitness: 343.76\n",
+      "\n",
+      "r1_50 | Running SA...\n",
+      "r1_50 | Total fitness: 991.67\n",
+      "\n",
+      "r1_100 | Running SA...\n",
+      "r1_100 | Total fitness: 1749.82\n",
+      "\n",
+      "r1_200 | Running SA...\n",
+      "r1_200 | Total fitness: 5276.71\n",
+      "\n",
+      "r1_500 | Running SA...\n",
+      "r1_500 | Total fitness: 18836.01\n",
+      "\n",
+      "r1_1000 | Running SA...\n",
+      "r1_1000 | Total fitness: 43177.41\n",
+      "\n",
+      "r2_10 | Running SA...\n",
+      "r2_10 | Total fitness: -332.54\n",
+      "\n",
+      "r2_20 | Running SA...\n",
+      "r2_20 | Total fitness: -599.53\n",
+      "\n",
+      "r2_50 | Running SA...\n",
+      "r2_50 | Total fitness: -1408.07\n",
+      "\n",
+      "r2_100 | Running SA...\n",
+      "r2_100 | Total fitness: -2558.73\n",
+      "\n",
+      "r2_200 | Running SA...\n",
+      "r2_200 | Total fitness: -3753.94\n",
+      "\n",
+      "r2_500 | Running SA...\n",
+      "r2_500 | Total fitness: -6880.43\n",
+      "\n",
+      "r2_1000 | Running SA...\n",
+      "r2_1000 | Total fitness: -7970.09\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for problem in problems_arr:\n",
+    "\n",
     "    best_tour, best_fitness, _ = simulated_annealing(\n",
     "        problem=problem,\n",
     "        initial_temp=INITIAL_TEMPERATURE,\n",
@@ -222,8 +377,91 @@
     "        num_iterations=SA_ITERATIONS,\n",
     "        show_process=False\n",
     "    )\n",
-    "    \"\"\"\n",
     "\n",
+    "\n",
+    "    #print(f\"{problem.name} | Best tour: {best_tour}\")\n",
+    "    print(f\"{problem.name} | Total fitness: {best_fitness:.2f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "073dee5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g_10 | Running Tabu Search...\n",
+      "g_10 | Total fitness: 1497.66\n",
+      "\n",
+      "g_20 | Running Tabu Search...\n",
+      "g_20 | Total fitness: 1755.51\n",
+      "\n",
+      "g_50 | Running Tabu Search...\n",
+      "g_50 | Total fitness: 2721.98\n",
+      "\n",
+      "g_100 | Running Tabu Search...\n",
+      "g_100 | Total fitness: 4824.16\n",
+      "\n",
+      "g_200 | Running Tabu Search...\n",
+      "g_200 | Total fitness: 8599.72\n",
+      "\n",
+      "g_500 | Running Tabu Search...\n",
+      "g_500 | Total fitness: 20347.14\n",
+      "\n",
+      "g_1000 | Running Tabu Search...\n",
+      "g_1000 | Total fitness: 40955.33\n",
+      "\n",
+      "r1_10 | Running Tabu Search...\n",
+      "r1_10 | Total fitness: 184.27\n",
+      "\n",
+      "r1_20 | Running Tabu Search...\n",
+      "r1_20 | Total fitness: 337.29\n",
+      "\n",
+      "r1_50 | Running Tabu Search...\n",
+      "r1_50 | Total fitness: 674.00\n",
+      "\n",
+      "r1_100 | Running Tabu Search...\n",
+      "r1_100 | Total fitness: 1331.19\n",
+      "\n",
+      "r1_200 | Running Tabu Search...\n",
+      "r1_200 | Total fitness: 3974.56\n",
+      "\n",
+      "r1_500 | Running Tabu Search...\n",
+      "r1_500 | Total fitness: 14161.68\n",
+      "\n",
+      "r1_1000 | Running Tabu Search...\n",
+      "r1_1000 | Total fitness: 34322.40\n",
+      "\n",
+      "r2_10 | Running Tabu Search...\n",
+      "r2_10 | Total fitness: -411.70\n",
+      "\n",
+      "r2_20 | Running Tabu Search...\n",
+      "r2_20 | Total fitness: -809.78\n",
+      "\n",
+      "r2_50 | Running Tabu Search...\n",
+      "r2_50 | Total fitness: -1666.19\n",
+      "\n",
+      "r2_100 | Running Tabu Search...\n",
+      "r2_100 | Total fitness: -2849.01\n",
+      "\n",
+      "r2_200 | Running Tabu Search...\n",
+      "r2_200 | Total fitness: -4715.44\n",
+      "\n",
+      "r2_500 | Running Tabu Search...\n",
+      "r2_500 | Total fitness: -8422.38\n",
+      "\n",
+      "r2_1000 | Running Tabu Search...\n",
+      "r2_1000 | Total fitness: -12238.87\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for problem in problems_arr:\n",
+    "    \n",
     "    best_tour, best_fitness, _ = tabu_search(\n",
     "        problem=problem,\n",
     "        num_iterations=TS_ITERATIONS,\n",
